# projects-solve-rd

./: .gitignore  .lintr  NEWS.md  README.md  gpap_error_summary.xlsx  index.py  model.yaml  molgenis-solve-rd.code-workspace  package.json  projects-solve-rd.code-workspace  requirements.txt  test.py
R/: novelomics.R  novelomics_templates.R  rd3_freeze_files.R  tmp_freeze_2.R  tmp_freeze_2_processing.R  tmp_solved_status.R  utils.R
app/: .gitignore  package.json
apps/: README.md
archive/: datafinder_get_kits.R  novelomics_experiment.R  novelomics_experiment.py  novelomics_new_record_mapping.py  novelomics_shipment.R  novelomics_shipment.py  novelomics_shipment.sh  novelomics_templates.R
data/: .gitignore  README.md  backgrup_new_orgs_2021_03_17.json
dev/: dev.R  setup.sh
emx/: .gitignore  README.md  emx.py
emx2/: disease.csv  emx2_setup.py  import.py  rd3_emx2.xlsx  test.py  transfer_lookups.py  transfer_metadata.py  utils.py
gdi/: README.md
lookups/: import.sh  rd3_info_datareleases.csv  rd3_info_erns.csv  rd3_info_organisations.csv  rd3_info_persons.csv  rd3_lookups_anatomicallocation.csv  rd3_lookups_dataUseConditions.csv  rd3_lookups_library.csv  rd3_lookups_libraryType.csv  rd3_lookups_materialType.csv  rd3_lookups_noyesunknown.csv  rd3_lookups_pathologicalstate.csv  rd3_lookups_seqType.csv  rd3_lookups_sex.csv  rd3_lookups_tissueType.csv  rd3_lookups_typeFile.csv  rd3_variants_assembly.csv  (+2 more)
model/: NEWS.md  (+18 more)
rd3-py/: package.json  pyproject.toml
rd3-py/dev/: dev.py
rd3-py/src/rd3tools/: __init__.py  __version__.py  molgenis.py  utils.py
(+344 files in other folders)
