[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rd3tools"
authors = [{ name = "David Ruvolo" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.9"
keywords = ["datbases", "data managment"]
dependencies = [
  "numpy>=1.23.5",
  "molgenis-py-client>=2.4.0",
  "pytz>=2022.6",
  "pandas>=1.5.2",
  "requests>=2.27.1",
]

[project.urls]
Home = "https://github.com/molgenis/projects-solve-rd"
